# search-tool

./: LICENSE  README.md  pyproject.toml
search_tool/: __init__.py  cli.py  config.py  exceptions.py  models.py  playwright_manager.py  search.py
search_tool/engines/: __init__.py  base_engine.py  brave.py  duckduckgo.py  google.py
search_tool/parsers/: __init__.py  base_parser.py  brave.py  duckduckgo.py  google.py
